@@ -1,3 +1,4 @@
+2017-03-03 Fixed executing code after checking, showing and resetting answers in Grid Scene module
 2017-03-02 Added current-page class in Table of Contents module
 2017-03-02 Fixed working in popup in eKeyboard module
 2017-02-27 Fixed expressions with white spaces in Math module
